                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 26-01-2005 changed: free a little more memory when leaving kai window
  - 26-01-2005 fixed: my programs, last focused control is not remembered
  - 26-01-2005 changed: Merged audio/video/dvd cachesize settings for harddisk to 1 setting.
               Added cachesize setting for unknown types on the internet (url's without a known audio or video extension).
               Allow cache sizes of 0.
  - 26-01-2005 fixed: ID3 tags with UTF16 fields show strange characters
  - 26-01-2005 updated: Polish language file (Thnx to napek)
  - 26-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 26-01-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 26-01-2005 added: Options to disable looking for custom thumbs on remote shares (folder.jpg/folder.tbn/<filename>.tbn),
                      Will speed things up on a slow connection and/or slow server and/or you have many folders.
                      Settings -> My Videos/My Music -> Library
  - 24-01-2005 changed: Default IMDb url is now akas.imdb.com for alternative title support.
  - 24-01-2005 added: [1105853]Added locks & context menu to My Programs, fixed some bugs - thanks to slacker!
  - 24-01-2005 fixed: music info tag, remove possible \r\n at the end of a tag field (artist, title...)
  - 24-01-2005 updated: Finnish language file (Thnx to jutski)
  - 24-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 24-01-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 24-01-2005 updated: Italian language file (Thnx to kotix)